--- a/trunk/API/appsettings.json
+++ b/trunk/API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    "DbConnectionString": ":)"
+  },
+
   "AllowedHosts": "*"
 }
